--- a/index.html
+++ b/index.html
@@ -291,27 +291,24 @@
     <section class="gridSection">
         <div class="sectionDesc processessDesc">
             <h1 class="sectionHeader">Chain Process</h1>
-            <p class="sectionPara">We do not charge any fees and we do not require 
-              any registration. You keep your privacy and your 
-              coins.
+            <p class="sectionPara">We do not charge any fees and You keep your privacy and your 
+              Profits.
             </p>
             <div class="eachProcesses">
                 <img src="./img/handshake-icon-white-line.svg" alt="handshake">
                 <div class="eachprocessesPara">
-                    <h1 class="processTitle">Trading</h1>
+                    <h1 class="processTitle">Investing</h1>
                     <p>
-                        The act of speculating on cryptocurrency price movements 
-                        via a CFD trading account, or buying and selling.
+                        Crypto investment is buying digital assets like Bitcoin and Ethereum, aiming for profit as prices fluctuate. It’s Guaranteed with SoftR & high reward.
                     </p>
                 </div>
             </div>
             <div class="eachProcesses">
                 <img src="./img/cart-icon-white-line.svg" alt="handshake">
                 <div class="eachprocessesPara">
-                    <h1 class="processTitle">Buying</h1>
+                    <h1 class="processTitle">Withdraw profit</h1>
                     <p>
-                        Best cryptocurrency exchanges currently purchase Bitcoin, 
-                        Ethereum, and Litecoin other coins and tokens on the platform.
+                        Withdrawing profit from Softr is easy and hassle-free. Once you make a profit, you can withdraw it the same day without delays. 
                     </p>
                 </div>
             </div>
@@ -324,7 +321,7 @@
     <!-- Markets -->
     <section class="gridSection">
         <div class="sectionDesc marketDesc">
-            <h1 class="sectionHeader">Markets at finger</h1>
+            <h1 class="sectionHeader">Sof R Investment</h1>
             <p class="sectionPara">The Blockchain is a decentralized, 
                 digital ledger of transactions that are recorded 
                 confirmed
@@ -334,8 +331,8 @@
                 <div>
                     <h1 class="marketTitle">Buying</h1>
                     <p class="darkPara">
-                        Best cryptocurrency exchanges currently purchase 
-                        Bitcoin, Ethereum, and Litecoin other coins and tokens 
+                        Best cryptocurrency Investment Platform currently. Invest
+                        Bitcoin, Ethereum, Litecoin and other coins and tokens 
                         on the platform.
                     </p>
                 </div>
@@ -343,10 +340,10 @@
             <div class="eachMarket">
                 <img src="./img/trading-icon-color.svg" alt="handshake">
                 <div>
-                    <h1 class="marketTitle">Trading</h1>
+                    <h1 class="marketTitle">Crypto</h1>
                     <p class="darkPara">
-                        The act of speculating on cryptocurrency price movements 
-                        via a CFD trading account, or buying and selling.
+                        Crypto, short for cryptocurrency, is digital money that operates on blockchain technology 
+                        without banks or middlemen. It’s decentralized, secure, and can be used for transactions, investments
                     </p>
                 </div>
             </div>
@@ -356,8 +353,8 @@
                     <h1 class="marketTitle">Supporting</h1>
                     <p class="darkPara">
                         Don’t worry if you’re new to crypto and digital 
-                        currencies – Skrill makes setting up a cryptocurrency 
-                        wallet easy.
+                        currencies – we Soft R Investment makes Investing in cryptocurrency 
+                        easy.
                     </p>
                 </div>
             </div>
@@ -367,7 +364,7 @@
                     <h1 class="marketTitle">Online</h1>
                     <p class="darkPara">
                         Cryptocurrency, especially Bitcoin, 
-                        has proven to be a popular trading 
+                        has proven to be a popular Investing
                         vehicle, even if legendary investors 
                         as good.
                     </p>
@@ -399,7 +396,59 @@
             </div>
             </div>
     </section>
-
+<!-- Markets -->
+    <section class="gridSection">
+        <div class="sectionDesc marketDesc">
+            <h1 class="sectionHeader">Sof R Investment</h1>
+            <p class="sectionPara">The Blockchain is a decentralized, 
+                digital ledger of transactions that are recorded 
+                confirmed
+            </p>
+            <div class="eachMarket">
+                <img src="./img/buy-icon-color.svg" alt="handshake">
+                <div>
+                    <h1 class="marketTitle">Buying</h1>
+                    <p class="darkPara">
+                        Best cryptocurrency Investment Platform currently. Invest
+                        Bitcoin, Ethereum, Litecoin and other coins and tokens 
+                        on the platform.
+                    </p>
+                </div>
+            </div>
+            <div class="eachMarket">
+                <img src="./img/trading-icon-color.svg" alt="handshake">
+                <div>
+                    <h1 class="marketTitle">Crypto</h1>
+                    <p class="darkPara">
+                        Crypto, short for cryptocurrency, is digital money that operates on blockchain technology 
+                        without banks or middlemen. It’s decentralized, secure, and can be used for transactions, investments
+                    </p>
+                </div>
+            </div>
+            <div class="eachMarket">
+                <img src="./img/support-icon-color.svg" alt="handshake">
+                <div>
+                    <h1 class="marketTitle">Supporting</h1>
+                    <p class="darkPara">
+                        Don’t worry if you’re new to crypto and digital 
+                        currencies – we Soft R Investment makes Investing in cryptocurrency 
+                        easy.
+                    </p>
+                </div>
+            </div>
+            <div class="eachMarket">
+                <img src="./img/online-icon-color.svg" alt="handshake">
+                <div>
+                    <h1 class="marketTitle">Online</h1>
+                    <p class="darkPara">
+                        Cryptocurrency, especially Bitcoin, 
+                        has proven to be a popular Investing
+                        vehicle, even if legendary investors 
+                        as good.
+                    </p>
+                </div>
+            </div>
+        </div>
     <!-- Dashboard -->
     <section class="gridSection">
         <div class="sectionDesc dashboardDesc">
