--- a/index.html
+++ b/index.html
@@ -400,58 +400,48 @@
 <!-- Markets -->
     <section class="gridSection">
         <div class="sectionDesc marketDesc">
-            <h1 class="sectionHeader">Sof R Investment</h1>
-            <p class="sectionPara">The Blockchain is a decentralized, 
-                digital ledger of transactions that are recorded 
-                confirmed
+            <h1 class="sectionHeader">Sof R is Regulated</h1>
+            <p class="sectionPara">Soft Return Investment is a regulated crypto and investment platform, compliant across South Africa, Europe, America, and Asia. Funds are securely stored offline, with an excellent rating.
             </p>
             <div class="eachMarket">
                 <img src="./img/buy-icon-color.svg" alt="handshake">
                 <div>
-                    <h1 class="marketTitle">Buying</h1>
+                    <h1 class="marketTitle">Regulated</h1>
                     <p class="darkPara">
-                        Best cryptocurrency Investment Platform currently. Invest
-                        Bitcoin, Ethereum, Litecoin and other coins and tokens 
-                        on the platform.
+                        Regulated with African based and European regulated crypto & Investment platform
                     </p>
                 </div>
             </div>
             <div class="eachMarket">
                 <img src="./img/trading-icon-color.svg" alt="handshake">
                 <div>
-                    <h1 class="marketTitle">Crypto</h1>
+                    <h1 class="marketTitle">Secure</h1>
                     <p class="darkPara">
-                        Crypto, short for cryptocurrency, is digital money that operates on blockchain technology 
-                        without banks or middlemen. It’s decentralized, secure, and can be used for transactions, investments
+                        Funds secured in offline wallets with Military grade Encryption. Fully compliant with South Africa, America, Asia & European Regulationsand money investment security standards
                     </p>
                 </div>
             </div>
             <div class="eachMarket">
                 <img src="./img/support-icon-color.svg" alt="handshake">
                 <div>
-                    <h1 class="marketTitle">Supporting</h1>
+                    <h1 class="marketTitle">Safe</h1>
                     <p class="darkPara">
-                        Don’t worry if you’re new to crypto and digital 
-                        currencies – we Soft R Investment makes Investing in cryptocurrency 
-                        easy.
+                        Following Regulations your Details/information are safely stored with Military grade Encryption
                     </p>
                 </div>
             </div>
             <div class="eachMarket">
                 <img src="./img/online-icon-color.svg" alt="handshake">
                 <div>
-                    <h1 class="marketTitle">Online</h1>
+                    <h1 class="marketTitle">Trusted</h1>
                     <p class="darkPara">
-                        Cryptocurrency, especially Bitcoin, 
-                        has proven to be a popular Investing
-                        vehicle, even if legendary investors 
-                        as good.
+                        Trusted by 60 Thousand Plus happy users. Excellent rating
                     </p>
                 </div>
             </div>
         </div>
         <div class="sectionPic marketspicSection" id="sectionPic">
-           <h1 class="marketspicHeader">CRYPTOCURRENCY</h1>
+           <h1 class="marketspicHeader">CRYPTO REGULATED</h1>
             <div class="marketsPicContainer">
                 <div class="marketPic marketPic1">
                     <img src="./img/persent-icon-white.svg" alt="">
@@ -479,10 +469,10 @@
     <!-- Dashboard -->
     <section class="gridSection">
         <div class="sectionDesc dashboardDesc">
-            <h1 class="sectionHeader">Trade crypto in seconds</h1>
+            <h1 class="sectionHeader">Invest crypto in seconds</h1>
             <p class="sectionPara">
-                But with prouple, you can mine bitcoin from your own phone! 
-                You no longer have to worry about costly transactions.
+                With Sof R, you mine Investment profits from your own phone! 
+                You no longer have to worry about costly Equipment.
             </p>
             <button class="btn">Explore Now</button>
         </div>
@@ -497,7 +487,7 @@
         <div class="sectionDesc">
             <h1 class="sectionHeader">Control your funds</h1>
             <p class="sectionPara">
-                Our mining pool offers some of the most competitive contracts in the market.
+                Our Investment pool offers some of the most competitive Profits in the market.
             </p>
             <div class="fundsContainer">
                 <div class="fund">
@@ -603,7 +593,7 @@
         </div>
 
         <div class="footerCopyright">
-             <p>&copy; 2023 design and developed by <a href="#" class="developedBy">Programming Insider</a>.</p>
+             <p>&copy; 2025 design and developed by <a href="#" class="developedBy">Sofr R Investment</a>.</p>
         </div>
     </footer>
     
