--- a/contact.html
+++ b/contact.html
@@ -6,23 +6,159 @@
     <title>Document</title>
     <link rel="stylesheet" href="./commonStyle.css">
     <link rel="stylesheet" href="style.css">
-
     <script src="https://kit.fontawesome.com/aa7454d09f.js" crossorigin="anonymous"></script>
 </head>
 <body>
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        /* Mobile Menu Styles */
+        .mobile-menu-btn {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            z-index: 1000;
+            background: transparent;
+            border: none;
+            cursor: pointer;
+            padding: 10px;
+            transition: 0.3s;
+        }
+
+        .menu-bar {
+            display: block;
+            width: 25px;
+            height: 3px;
+            margin: 5px 0;
+            background-color: #fff;
+            transition: 0.4s;
+        }
+
+        .mobile-menu {
+            position: fixed;
+            top: 0;
+            right: -100%;
+            width: 250px;
+            height: 100vh;
+            background: rgba(255, 255, 255, 0.98);
+            backdrop-filter: blur(15px);
+            z-index: 999;
+            transition: 0.3s ease-in-out;
+            padding: 80px 20px 20px;
+        }
+
+        .mobile-menu.active {
+            right: 0;
+        }
+
+        .menu-list {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        .menu-list li {
+            margin-bottom: 25px;
+        }
+
+        .menu-list a {
+            text-decoration: none;
+            color: #333;
+            font-family: Arial, sans-serif;
+            font-size: 20px;
+            display: block;
+            padding: 12px;
+            transition: 0.3s;
+            border-radius: 5px;
+        }
+
+        .menu-list a:hover {
+            background: rgba(0, 123, 255, 0.1);
+            color: #007bff;
+        }
+
+        /* Hamburger Animation */
+        .mobile-menu-btn.active .menu-bar:nth-child(1) {
+            transform: rotate(-45deg) translate(-5px, 6px);
+        }
+
+        .mobile-menu-btn.active .menu-bar:nth-child(2) {
+            opacity: 0;
+        }
+
+        .mobile-menu-btn.active .menu-bar:nth-child(3) {
+            transform: rotate(45deg) translate(-5px, -6px);
+        }
+
+        /* Body Styling */
+        body {
+            margin: 0;
+            min-height: 200vh;
+        }
+    </style>
+</head>
+<body>
+    <!-- Hamburger Menu Button -->
+    <button class="mobile-menu-btn" id="menuBtn">
+        <span class="menu-bar"></span>
+        <span class="menu-bar"></span>
+        <span class="menu-bar"></span>
+    </button>
+
+    <!-- Mobile Menu -->
+    <nav class="mobile-menu" id="mobileMenu">
+        <ul class="menu-list">
+            <li><a href="https://www.home.com">Home</a></li>
+            <li><a href="https://www.ab.com">About Us</a></li>
+            <li><a href="https://www.bn.cv">Contact Us</a></li>
+        </ul>
+    </nav>
+
+    <script>
+        const menuBtn = document.getElementById('menuBtn');
+        const mobileMenu = document.getElementById('mobileMenu');
+
+        // Toggle menu
+        menuBtn.addEventListener('click', () => {
+            mobileMenu.classList.toggle('active');
+            menuBtn.classList.toggle('active');
+        });
+
+        // Close menu when clicking links
+        document.querySelectorAll('.menu-list a').forEach(link => {
+            link.addEventListener('click', () => {
+                mobileMenu.classList.remove('active');
+                menuBtn.classList.remove('active');
+                // Navigate to link normally (same tab)
+            });
+        });
+
+        // Close menu when clicking outside
+        document.addEventListener('click', (event) => {
+            if (!event.target.closest('.mobile-menu') && 
+                !event.target.closest('.mobile-menu-btn')) {
+                mobileMenu.classList.remove('active');
+                menuBtn.classList.remove('active');
+            }
+        });
+    </script>
+</body>
+</html>
     <!-- Header -->
     <header>
         <div id="logo">
             <a href="./index.html">
-                <img src="./img/logo-white.png" alt="">
-                </a>
+            <img src="./img/logo-white.png" alt="">
+            </a>
         </div>
         <ul class="nav" id="nav">
             <ul class="navLogo">
                 <a href="./index.html">
-                    <img src="./img/logo-white.png" alt="">
-                </a>
+                     <img src="./img/logo-white.png" alt="">
+               </a>
             </ul>
+
             <li class="nav-link"><a href="./index.html">Home</a></li>
             <li class="nav-link"><a href="./aboutus.html">About Us</a></li>
             <li class="nav-link"><a href="./contact.html">Contact</a></li>
@@ -38,6 +174,9 @@
         </div>
     </header>
 
+    <!-- Contact form -->
+<script src="https://widgets.coingecko.com/gecko-coin-price-marquee-widget.js"></script>
+<gecko-coin-price-marquee-widget locale="en" dark-mode="true" transparent-background="true" outlined="true" coin-ids="" initial-currency="usd"></gecko-coin-price-marquee-widget>
     <!-- Contact form -->
     <section class="gridSection contactSection">
         <div class="contactformContainer">
@@ -60,25 +199,19 @@
     <div class="address">
         <div class="eachAddress">
             <h1>Tokyo</h1>
-            <p>Phone: (814) 842-3838</p>
-            <p>Address: 264 Pine Pitch RdBuffalo Mills, Pennsylvania(PA), 15534</p>
-            <p>Email: demo@website.com</p>
-        </div>
-
-        <div class="eachAddress">
-            <h1>USA</h1>
-            <p>Phone: (814) 842-3838</p>
-            <p>Address: 264 Pine Pitch RdBuffalo Mills, Pennsylvania(PA), 15534</p>
-            <p>Email: demo@website.com</p>
-        </div>
-
-        <div class="eachAddress">
-            <h1>Canada</h1>
-            <p>Phone: (814) 842-3838</p>
-            <p>Address: 264 Pine Pitch RdBuffalo Mills, Pennsylvania(PA), 15534</p>
-            <p>Email: demo@website.com</p>
+            <p>Whatsapp : </p>
+            <p>Address: 350 Frederick St 0183 Pretoria, South Africa</p>
+            <p>Email: support@softrinvestment.com</p>
         </div>
     </div>
+
+<script src="https://price-static.crypto.com/latest/public/static/widget/index.js"></script>
+<div
+  id="crypto-widget-CoinList"
+  data-transparent="true"
+  data-theme="dark"
+  data-design="classic"
+  data-coin-ids="1,166,25062"></div>
 
     <!-- footer -->
     <footer>
