--- a/indexc.html
+++ b/indexc.html
@@ -161,7 +161,10 @@
 
             <li class="nav-link"><a href="./index.html">Home</a></li>
             <li class="nav-link"><a href="./aboutus.html">About Us</a></li>
+            <li class="nav-link"><a href="./invest.html">Invest</a></li>
+            <li class="nav-link"><a href="./review.html">Reviews</a></li>
             <li class="nav-link"><a href="./contact.html">Contact</a></li>
+            <li class="nav-link"><a href="https://www.bn.cv">Reviews</a></li>
             <li class="sociallinkContainer">
                 <img class="sociallink" src="./img/fabook-icon-white.svg" alt="">
                 <img class="sociallink" src="./img/twitter-icon-white.svg" alt="">
