--- a/indexc.html
+++ b/indexc.html
@@ -164,7 +164,14 @@
             <li class="nav-link"><a href="./invest.html">Invest</a></li>
             <li class="nav-link"><a href="./review.html">Reviews</a></li>
             <li class="nav-link"><a href="./contact.html">Contact</a></li>
-            <li class="nav-link"><a href="https://www.bn.cv">Reviews</a></li>
+            <li class="nav-link">
+            <a href="#">User Account</a>
+            <ul class="sub-menu">
+            <li><a href="https://www.softrinvestment.online/user-profile">Go to my Profile</a></li>
+            <li><a href="https://www.softrinvestment.online/my-wallet">Go to My Wallet</a></li>
+            </ul>
+            </li>
+
             <li class="sociallinkContainer">
                 <img class="sociallink" src="./img/fabook-icon-white.svg" alt="">
                 <img class="sociallink" src="./img/twitter-icon-white.svg" alt="">
