--- a/Invest.html
+++ b/Invest.html
@@ -1,1 +1,431 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="./commonStyle.css">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/aa7454d09f.js" crossorigin="anonymous"></script>
+</head>
+<body>
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        /* Mobile Menu Styles */
+        .mobile-menu-btn {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            z-index: 1000;
+            background: transparent;
+            border: none;
+            cursor: pointer;
+            padding: 10px;
+            transition: 0.3s;
+        }
 
+        .menu-bar {
+            display: block;
+            width: 25px;
+            height: 3px;
+            margin: 5px 0;
+            background-color: #fff;
+            transition: 0.4s;
+        }
+
+        .mobile-menu {
+            position: fixed;
+            top: 0;
+            right: -100%;
+            width: 250px;
+            height: 100vh;
+            background: rgba(255, 255, 255, 0.98);
+            backdrop-filter: blur(15px);
+            z-index: 999;
+            transition: 0.3s ease-in-out;
+            padding: 80px 20px 20px;
+        }
+
+        .mobile-menu.active {
+            right: 0;
+        }
+
+        .menu-list {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        .menu-list li {
+            margin-bottom: 25px;
+        }
+
+        .menu-list a {
+            text-decoration: none;
+            color: #333;
+            font-family: Arial, sans-serif;
+            font-size: 20px;
+            display: block;
+            padding: 12px;
+            transition: 0.3s;
+            border-radius: 5px;
+        }
+
+        .menu-list a:hover {
+            background: rgba(0, 123, 255, 0.1);
+            color: #007bff;
+        }
+
+        /* Hamburger Animation */
+        .mobile-menu-btn.active .menu-bar:nth-child(1) {
+            transform: rotate(-45deg) translate(-5px, 6px);
+        }
+
+        .mobile-menu-btn.active .menu-bar:nth-child(2) {
+            opacity: 0;
+        }
+
+        .mobile-menu-btn.active .menu-bar:nth-child(3) {
+            transform: rotate(45deg) translate(-5px, -6px);
+        }
+
+        /* Body Styling */
+        body {
+            margin: 0;
+            min-height: 200vh;
+        }
+    </style>
+</head>
+<body>
+    <!-- Hamburger Menu Button -->
+    <button class="mobile-menu-btn" id="menuBtn">
+        <span class="menu-bar"></span>
+        <span class="menu-bar"></span>
+        <span class="menu-bar"></span>
+    </button>
+
+    <!-- Mobile Menu -->
+    <nav class="mobile-menu" id="mobileMenu">
+        <ul class="menu-list">
+            <li><a href="https://www.home.com">Home</a></li>
+            <li><a href="https://www.ab.com">About Us</a></li>
+            <li><a href="https://www.bn.cv">Contact Us</a></li>
+        </ul>
+    </nav>
+
+    <script>
+        const menuBtn = document.getElementById('menuBtn');
+        const mobileMenu = document.getElementById('mobileMenu');
+
+        // Toggle menu
+        menuBtn.addEventListener('click', () => {
+            mobileMenu.classList.toggle('active');
+            menuBtn.classList.toggle('active');
+        });
+
+        // Close menu when clicking links
+        document.querySelectorAll('.menu-list a').forEach(link => {
+            link.addEventListener('click', () => {
+                mobileMenu.classList.remove('active');
+                menuBtn.classList.remove('active');
+                // Navigate to link normally (same tab)
+            });
+        });
+
+        // Close menu when clicking outside
+        document.addEventListener('click', (event) => {
+            if (!event.target.closest('.mobile-menu') && 
+                !event.target.closest('.mobile-menu-btn')) {
+                mobileMenu.classList.remove('active');
+                menuBtn.classList.remove('active');
+            }
+        });
+    </script>
+</body>
+</html>
+    <!-- Header -->
+    <header>
+        <div id="logo">
+            <a href="./index.html">
+            <img src="./img/logo-white.png" alt="">
+            </a>
+        </div>
+        <ul class="nav" id="nav">
+            <ul class="navLogo">
+                <a href="./index.html">
+                     <img src="./img/logo-white.png" alt="">
+               </a>
+            </ul>
+
+            <li class="nav-link"><a href="./index.html">Home</a></li>
+            <li class="nav-link"><a href="./aboutus.html">About Us</a></li>
+            <li class="nav-link"><a href="./invest.html">Invest</a></li>
+            <li class="nav-link"><a href="./review.html">Reviews</a></li>
+            <li class="nav-link"><a href="./contact.html">Contact Us</a></li>
+            <li class="nav-link">
+            <li class="nav-link">
+    <a href="#" onclick="toggleSubMenu(event)">User Account</a>
+    <ul class="sub-menu" style="display: none;">
+        <li><a href="https://www.softrinvestment.online/user-profile">Go to my Profile</a></li>
+        <li><a href="https://www.softrinvestment.online/my-wallet">Go to My Wallet</a></li>
+    </ul>
+</li>
+
+<script>
+    function toggleSubMenu(event) {
+        event.preventDefault();
+        const subMenu = event.target.nextElementSibling;
+        subMenu.style.display = subMenu.style.display === 'none' ? 'block' : 'none';
+    }
+</script>
+            <li class="sociallinkContainer">
+                <img class="sociallink" src="./img/fabook-icon-white.svg" alt="">
+                <img class="sociallink" src="./img/twitter-icon-white.svg" alt="">
+                <img class="sociallink" src="./img/inkedin-icon-white.svg" alt="">
+                <img class="sociallink" src="./img/whatsapp-icon-white.svg" alt="">
+            </li>
+        </ul>
+        <div id="barContainer">
+            <i id="bar" class="fa-solid fa-bars"></i>
+        </div>
+    </header>
+
+    <!-- Hero page -->
+<script src="https://widgets.coingecko.com/gecko-coin-price-marquee-widget.js"></script>
+<gecko-coin-price-marquee-widget locale="en" dark-mode="true" transparent-background="true" outlined="true" coin-ids="" initial-currency="usd"></gecko-coin-price-marquee-widget>
+    <section class="hero gridSection">
+        <div class="sectionDesc">
+            <h1 class="headline">
+                <span class="cryptoText">INVEST NOW</span>.
+            </h1>
+        </div>
+    </section>
+    
+    /* Updated carousel styling for 2x2 grid layout */
+.carouselContainer {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+}
+
+.eachCarousel {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    border: 1px solid #ddd;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #fff;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.carouselDesc {
+    margin-top: 10px;
+}
+
+.carouselPrice {
+    font-weight: bold;
+    margin: 10px 0;
+}
+
+.carouselBtn {
+    background-color: #007bff;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.carouselBtn:hover {
+    background-color: #0056b3;
+}
+
+.carouselIndicator {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.indicator {
+    width: 10px;
+    height: 10px;
+    background-color: #bbb;
+    border-radius: 50%;
+    margin: 0 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.activeIndicator {
+    background-color: #007bff;
+}
+
+@media (max-width: 768px) {
+    .carouselContainer {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 480px) {
+    .carouselContainer {
+        grid-template-columns: 1fr;
+    }
+}
+
+<!-- Carousel -->
+<section>
+    <div class="carouselContainer">
+        <div class="eachCarousel eachCarouselBorder">
+            <img src="./img/bitcoin-icon.png" alt="">
+            <article class="carouselDesc">
+                <h1 class="carouselTitle">Starter Plan</h1>
+                <p class="carouselPara">Plan Price: $26/R467</p>
+                <div class="carouselPrice">
+                    <h3>2Hours Profit: $57/
+                     6Hours Profit: $67</h3>
+                </div>
+                <button class="btn carouselBtn">Buy Plan</button>
+            </article>
+        </div>
+
+        <div class="eachCarousel">
+            <img src="./img/ethereum-icon.png" alt="">
+            <article class="carouselDesc">
+                <h1 class="carouselTitle">Advance Plan</h1>
+                <p class="carouselPara">Plan Price: $​76/R1,363</p>
+                <div class="carouselPrice">
+                    <h3>2Hours Profit:$​167/
+                     6Hours Profit:$​197</h3>
+                </div>
+                <button class="btn carouselBtn">Buy Plan</button>
+            </article>
+        </div>
+
+        <div class="eachCarousel">
+            <img src="./img/tether-icon.png" alt="">
+            <article class="carouselDesc">
+                <h1 class="carouselTitle">Pro Plan</h1>
+               <p class="carouselPara">Plan Price: $185/​R3363</p>
+                <div class="carouselPrice">
+                    <h3>2Hours Profit:$407/
+                     6Hours Profit:$481</h3>
+                </div>
+                <button class="btn carouselBtn">Buy Plan</button>
+            </article>
+        </div>
+
+        <div class="eachCarousel">
+            <img src="./img/bitcoin-icon.png" alt="">
+            <article class="carouselDesc">
+                <h1 class="carouselTitle">Expert Plan</h1>
+                <p class="carouselPara">Plan Price: $240/R4340</p>
+                <div class="carouselPrice">
+                    <h3>2Hours Profit:$​528/
+                     6Hours Profit:$​624</h3>
+                </div>
+                <button class="btn carouselBtn">Buy Plan</button>
+            </article>
+        </div>
+
+        <div class="eachCarousel">
+            <img src="./img/ethereum-icon.png" alt="">
+            <article class="carouselDesc">
+                <h1 class="carouselTitle">Max Plan</h1>
+                <p class="carouselPara">Plan Price: $1,006/R18657</p>
+                <div class="carouselPrice">
+                    <h3>2Hours Profit:$2006/
+                     6Hours Profit:$6006</h3>
+                </div>
+                <button class="btn carouselBtn">Buy Plan</button>
+            </article>
+        </div>
+
+        <div class="eachCarousel">
+            <img src="./img/tether-icon.png" alt="">
+           <article class="carouselDesc">
+                <h1 class="carouselTitle">Custom Plan</h1>
+                <p class="carouselPara">Plan Price: $10 To $10,000</p>
+                <div class="carouselPrice">
+                    <h3>Profit:$57 Upto $900007</h3>
+                </div>
+                <button class="btn carouselBtn">Custom Plan</button>
+            </article>
+        </div>
+    </div>
+    <div class="carouselIndicator">
+        <div class="indicator activeIndicator" onclick="slideCarousel(0)"></div>
+        <div class="indicator" onclick="slideCarousel(1)"></div>
+        <div class="indicator" onclick="slideCarousel(2)"></div>
+        <div class="indicator" onclick="slideCarousel(3)"></div>
+        <div class="indicator" onclick="slideCarousel(4)"></div>
+        <div class="indicator" onclick="slideCarousel(5)"></div>
+    </div>
+</section>
+
+
+    <!-- footer -->
+    <footer>
+        <div class="joinSection">
+            <div class="joinDesc">
+                <h1 class="sectionHeader">Join with us</h1>
+                <p class="sectionPara">
+                    Once you have created your account, you can purchase coins from website
+                </p>
+            </div>
+            <button class="btn primaryBtn">JOIN NOW</button>
+        </div>
+
+        <div class="footerlinksContainer">
+            <div class="footerAboutus">
+                <img src="./img/logo-white.png" alt="">
+                <p class="darkPara">With no commissions and a simple user interface, 
+                 Prouple is the most reliable way to trade for 
+                 Cryptocurrency.
+                </p>
+                <div class="footersociallinkContainer">
+                    <img class="sociallink" src="./img/fabook-icon-white.svg" alt="">
+                    <img class="sociallink" src="./img/twitter-icon-white.svg" alt="">
+                    <img class="sociallink" src="./img/inkedin-icon-white.svg" alt="">
+                    <img class="sociallink" src="./img/whatsapp-icon-white.svg" alt="">
+                </div>
+            </div>
+
+            <div class="footerlink">
+                <h1 class="linkTitle">Explore</h1>
+                <a href="#" class="eachLink">About us</a>
+                <a href="#" class="eachLink">FAQ</a>
+                <a href="#" class="eachLink">Blog</a>
+                <a href="#" class="eachLink">Contact</a>
+            </div>
+
+            <div class="footerlink">
+                <h1 class="linkTitle">Service</h1>
+                <a href="#" class="eachLink">Mining</a>
+                <a href="#" class="eachLink">Control Data</a>
+                <a href="#" class="eachLink">Design</a>
+                <a href="#" class="eachLink">Security</a>
+            </div>
+
+            <div class="footerlink">
+                <h1 class="linkTitle">Resource</h1>
+                <a href="#" class="eachLink">Style Guide</a>
+                <a href="#" class="eachLink">Change Log</a>
+                <a href="#" class="eachLink">License</a>
+            </div>
+        </div>
+
+        <div class="footerCopyright">
+             <p>&copy; 2023 design and developed by <a href="#" class="developedBy">Programming Insider</a>.</p>
+        </div>
+    </footer>
+
+    <script src="./script.js"></script>    
+</body>
+</html>
