--- a/Invest.html
+++ b/Invest.html
@@ -203,84 +203,7 @@
         </div>
     </section>
     
-    /* Updated carousel styling for 2x2 grid layout */
-.carouselContainer {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-    justify-content: center;
-    align-items: center;
-}
-
-.eachCarousel {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    border: 1px solid #ddd;
-    padding: 20px;
-    border-radius: 10px;
-    background-color: #fff;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.carouselDesc {
-    margin-top: 10px;
-}
-
-.carouselPrice {
-    font-weight: bold;
-    margin: 10px 0;
-}
-
-.carouselBtn {
-    background-color: #007bff;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.carouselBtn:hover {
-    background-color: #0056b3;
-}
-
-.carouselIndicator {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-}
-
-.indicator {
-    width: 10px;
-    height: 10px;
-    background-color: #bbb;
-    border-radius: 50%;
-    margin: 0 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.activeIndicator {
-    background-color: #007bff;
-}
-
-@media (max-width: 768px) {
-    .carouselContainer {
-        grid-template-columns: repeat(2, 1fr);
-    }
-}
-
-@media (max-width: 480px) {
-    .carouselContainer {
-        grid-template-columns: 1fr;
-    }
-}
-
-<!-- Carousel -->
-<section>
+    <section>
     <div class="carouselContainer">
         <div class="eachCarousel eachCarouselBorder">
             <img src="./img/bitcoin-icon.png" alt="">
@@ -359,15 +282,60 @@
             </article>
         </div>
     </div>
-    <div class="carouselIndicator">
-        <div class="indicator activeIndicator" onclick="slideCarousel(0)"></div>
-        <div class="indicator" onclick="slideCarousel(1)"></div>
-        <div class="indicator" onclick="slideCarousel(2)"></div>
-        <div class="indicator" onclick="slideCarousel(3)"></div>
-        <div class="indicator" onclick="slideCarousel(4)"></div>
-        <div class="indicator" onclick="slideCarousel(5)"></div>
-    </div>
 </section>
+
+<style>
+    .carouselContainer {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* 2 per row */
+    gap: 20px;
+    justify-content: center;
+    padding: 20px;
+}
+
+.eachCarousel {
+    background-color: #f5f5f5; /* Light background */
+    border-radius: 16px; /* Rounded corners */
+    padding: 20px;
+    text-align: center;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Soft shadow */
+}
+
+.eachCarousel img {
+    width: 50px; /* Adjust image size */
+    height: 50px;
+    margin-bottom: 10px;
+}
+
+.carouselTitle {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.carouselPara {
+    font-size: 14px;
+    color: #333;
+}
+
+.carouselPrice h3 {
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.carouselBtn {
+    background-color: #5b6ee1; /* Button color */
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 20px; /* Fully rounded button */
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.carouselBtn:hover {
+    background-color: #3e50d4;
+}
+
 
 
     <!-- footer -->
