--- a/Invest.html
+++ b/Invest.html
@@ -111,7 +111,11 @@
         <ul class="menu-list">
             <li><a href="https://www.home.com">Home</a></li>
             <li><a href="https://www.ab.com">About Us</a></li>
+            <li><a href="https://www.bn.cv">Invest</a></li>
+            <li><a href="https://www.bn.cv">Reviews</a></li>
             <li><a href="https://www.bn.cv">Contact Us</a></li>
+            <li><a href="https://www.bn.cv">Go To My Account</a></li>
+            <li><a href="https://www.bn.cv">Go To My Profile</a></li>
         </ul>
     </nav>
 
