--- a/Invest.html
+++ b/Invest.html
@@ -291,8 +291,8 @@
 <style>
     .carouselContainer {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* 2 per row */
-    gap: 20px;
+    grid-template-columns: repeat(2, 1fr); /* 2 columns */
+    gap: 20px; /* Space between items */
     justify-content: center;
     padding: 20px;
 }
@@ -323,7 +323,6 @@
 
 .carouselPrice h3 {
     font-weight: bold;
-    font-size: 15px;
 }
 
 .carouselBtn {
